Fixed relevant directory specifications

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,6 +1,6 @@
 <div class="flex-shrink-0 p-3 bg-dark sidebar" style="width: 280px;">
   <!-- Title -->
-  <a href="/index.html" class="d-flex align-items-center pb-3 mb-3 text-white text-decoration-none border-bottom">
+  <a href="../index.html" class="d-flex align-items-center pb-3 mb-3 text-white text-decoration-none border-bottom">
     <span class="fs-5 fw-semibold">Contents</span>
   </a>
   <!-- Begin Table of Contents -->
@@ -12,11 +12,11 @@
       </button>
       <div class="collapse" id="basics-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li><a href="/basics/voting.html" class="link-dark rounded text-white">Voting (Monthly)</a></li>
-          <li><a href="/basics/voting.html" class="link-dark rounded text-white">Daily</a></li>
-          <li><a href="#" class="link-dark rounded text-white">Reminders</a></li>
-          <li><a href="#" class="link-dark rounded text-white">Personal Stats</a></li>
-          <li><a href="#" class="link-dark rounded text-white">Buying Gems</a></li>
+          <li><a href="../basics/voting.html" class="link-dark rounded text-white">Voting (Monthly)</a></li>
+          <li><a href="../basics/daily.html" class="link-dark rounded text-white">Daily</a></li>
+          <li><a href="../basics/reminders.html" class="link-dark rounded text-white">Reminders</a></li>
+          <li><a href="../basics/stats.html" class="link-dark rounded text-white">Personal Stats</a></li>
+          <li><a href="../basics/gems.html" class="link-dark rounded text-white">Buying Gems</a></li>
         </ul>
       </div>
     </li>
